<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp">


    <RadioGroup
        android:id="@+id/radiogroup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RadioButton
        android:id="@+id/rbWord"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/word"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        android:checked="true"
        android:fontFamily="@font/gotham_narrow_book"
        android:background="@drawable/rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/rbAyahNo"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded"
        android:layout_marginStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        android:fontFamily="@font/gotham_narrow_book"
        app:layout_constraintLeft_toRightOf="@id/rbWord"
        android:text="@string/ayah_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded"
        android:layout_marginTop="10dp"
        android:gravity="top|start"
        android:inputType="text"
        android:maxLines="1"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded"
        android:layout_marginEnd="5dp"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:text="@string/search"
        app:layout_constraintTop_toBottomOf="@id/etWord"
        app:layout_constraintRight_toRightOf="parent"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>