<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_vector_6">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/gotham_narrow_bold"
            android:gravity="center"
            android:text="@string/language_selection"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/gotham_narrow_book"
            android:gravity="left"
            android:text="@string/please_select_language_description"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/spLanguage"
            app:layout_constraintLeft_toLeftOf="@id/tvTitle"
            app:layout_constraintRight_toRightOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spLanguage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnOk"
            app:layout_constraintLeft_toLeftOf="@id/tvDescription"
            app:layout_constraintRight_toRightOf="@id/tvDescription"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            style="@style/TheButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/spLanguage"
            app:layout_constraintTop_toBottomOf="@id/spLanguage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/loadingprogress" />

</androidx.constraintlayout.widget.ConstraintLayout>


